--- a/PW/index.html
+++ b/PW/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
 	<head>
 		<title>Prueba de Web</title>
@@ -9,4 +10,5 @@
 		<font size=7 color=red face=times new rowan><p align=center>JOSE MARIA </p></font><br>
 		<img src="img/imagen1.jpg">
 	</body>
+
 </html>
