--- a/PW/index.html
+++ b/PW/index.html
@@ -8,7 +8,8 @@
 		<center><h1>TECNM CAMPUS ACAPULCO</h1></center>
 		<h3><p align=center>ING.SISTEMAS COMPUTACIONALES</p></h3>
 		<font size=7 color=red face=times new rowan><p align=center>JOSE MARIA </p></font><br>
-		<img src="img/imagen1.jpg">
+		<img src="img/imagen1.png">
 	</body>
 
 </html>
+
