--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<center><h1>TECNM CAMPUS ACAPULCO</h1></center>
 		<h3><p align=center>ING.SISTEMAS COMPUTACIONALES</p></h3>
 		<font size=7 color=red face=times new rowan><p align=center>JOSE MARIA </p></font><br>
-		<img src="img/imagen1.jpg">
+		<center><img src="img/imagen1.jpg" width=200 height=100 ></center>
 	</body>
+
 </html>
