creacion de tabla

--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
 		<h3><p align=center>ING.SISTEMAS COMPUTACIONALES</p></h3>
 		<font size=7 color=red face=times new rowan><p align=center>JOSE MARIA </p></font><br>
 		<center><img src="img/imagen1.jpg" width=400 height=250 ></center>
+
+		<table border=2 width=300>
+			<tr>
+				<th>1</th>
+				<th>2</th>
+				<th>3</th>
+			</tr>
+
+			<tr>
+				<td>a</td>
+				<td>b</td>
+				<td>c</td>
+			</tr>
+		</table>
+
 	</body>
 
 </html>
