--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
 		<title>Prueba de Web</title>
 	</head>
 
-	<body>
+	<body bgcolor="aqua">
 		<center><h1>TECNM CAMPUS ACAPULCO</h1></center>
 		<h3><p align=center>ING.SISTEMAS COMPUTACIONALES</p></h3>
 		<font size=7 color=red face=times new rowan><p align=center>JOSE MARIA </p></font><br>
 		<center><img src="img/imagen1.jpg" width=400 height=250 ></center>
 
-		<table border=2 width=300>
-			<tr>
+		<br><center><table border=2 width=500>
+			<tr bgcolor="yellow">
 				<th>1</th>
 				<th>2</th>
 				<th>3</th>
 			</tr>
 
-			<tr>
+			<tr background="img/fondo2.png">
 				<td>a</td>
 				<td>b</td>
 				<td>c</td>
 			</tr>
-		</table>
+		</table></center>
 
 	</body>
 
