imagen en tabla

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<br><center><table border=2 width=500>
 			<tr bgcolor="yellow">
 				<th>1</th>
-				<th>2</th>
+				<th><img src="img/imagen2.png" width=10 height=10 ></th>
 				<th>3</th>
 			</tr>
 
