cambio total, practica

--- a/index.html
+++ b/index.html
@@ -1,27 +1,22 @@
 <html>
 	<head>
-		<title>Prueba de Web</title>
+		<title>Practica 1</title>
 	</head>
 
-	<body bgcolor="aqua">
-		<center><h1>TECNM CAMPUS ACAPULCO</h1></center>
-		<h3><p align=center>ING.SISTEMAS COMPUTACIONALES</p></h3>
-		<font size=7 color=red face=times new rowan><p align=center>JOSE MARIA </p></font><br>
-		<center><img src="img/imagen1.jpg" width=400 height=250 ></center>
+	<body bgcolor="#00704A">
+		
+		<br><center><img src="img/logo1.png" width=300 height=300 ></center><br>
 
-		<br><center><table border=2 width=500>
-			<tr bgcolor="yellow">
-				<th>1</th>
-				<th><img src="img/imagen2.png" width=10 height=10 ></th>
-				<th>3</th>
-			</tr>
-
-			<tr background="img/fondo2.png">
-				<td>a</td>
-				<td>b</td>
-				<td>c</td>
+		<br><center><table border=2 width=600>
+			<tr>
+				<th><img src="img/1.jpg" width=150 height=150></th>
+				<th><img src="img/2.jpg" width=150 height=150></th>
+				<th><img src="img/4.png" width=150 height=150></th>
+				<th><img src="img/6.jpg" width=150 height=150></th>
 			</tr>
 		</table></center>
+
+		<br><font size=7 color=white face=times new rowan><p align=center>JOSE MARIA RAMIREZ AREVALO</p></font><br>
 
 	</body>
 
