cambio total, navegadores

--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <html>
 	<head>
-		<title>Practica 1</title>
+		<title>Practica 2</title>
 	</head>
 
-	<body bgcolor="#00704A">
-		
-		<br><center><img src="img/logo1.png" width=300 height=300 ></center><br>
+	<body>
 
-		<br><center><table border=2 width=600>
-			<tr>
-				<th><img src="img/1.jpg" width=150 height=150></th>
-				<th><img src="img/2.jpg" width=150 height=150></th>
-				<th><img src="img/4.png" width=150 height=150></th>
-				<th><img src="img/6.jpg" width=150 height=150></th>
+		<br><center><table border="0">
+			<tr height="200">
+				<td width="300" bgcolor="yellow" align="center"><img src="img/nave1.png" width=200 height=200></td>
+				<td width="100"></td>
+				<td width="300" bgcolor="green" align="center"><img src="img/nave3.png" width=200 height=200></td>
+			</tr>
+
+			<tr height="80">
+				<td></td>
+				<td></td>
+				<td></td>
+			</tr>	
+			
+			<tr height="200">
+				<td width="300" bgcolor="red" align="center"><img src="img/nave2.png" width=200 height=200></td>
+				<td width="100"></td>
+				<td width="300" bgcolor="blue" align="center"><img src="img/nave4.png" width=200 height=200></td>
 			</tr>
 		</table></center>
 
-		<br><font size=7 color=white face=times new rowan><p align=center>JOSE MARIA RAMIREZ AREVALO</p></font><br>
+		<br><font size=7 color=black face=times new rowan><p align=center>JOSE MARIA RAMIREZ AREVALO</p></font><br>
 
 	</body>
 
